some improvements in project setup
issue #28

--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -32,6 +32,9 @@
     "start": "yarn rebuild:browser && yarn --cwd open-bpmn-app start",
     "start:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external"
   },
+  "dependencies": {
+    "@eclipse-glsp/client": "0.10.0-next.385713d.170"
+  },  
   "peerDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
