--- a/open-bpmn.glsp-client/open-bpmn-theia/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-theia/package.json
@@ -28,8 +28,7 @@
   ],
   "dependencies": {
     "@open-bpmn/open-bpmn-glsp": "0.0.9",
-    "@eclipse-glsp/theia-integration": "0.10.0-next.a2c1ac1.122",
-    "@eclipse-glsp/client": "0.10.0-next.385713d.170"
+    "@eclipse-glsp/theia-integration": "0.10.0-next.a2c1ac1.122"
   },
   "scripts": {
     "prepare": "yarn  clean && yarn build && yarn lint",
