extended open bpmn2 ecore file

--- a/open-bpmn.glsp-server/plugin.xml
+++ b/open-bpmn.glsp-server/plugin.xml
@@ -21,4 +21,12 @@
             class="org.imixs.bpmn2.util.Bpmn2ResourceFactoryImpl"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated BPMN20 -->
+      <package
+            uri="http://www.eclipse.org/glsp/graph"
+            class="org.eclipse.glsp.graph.GraphPackage"
+            genModel="model/BPMN20.genmodel"/>
+   </extension>
+
 </plugin>
