--- a/open-bpmn.glsp-server/.vscode/launch.json
+++ b/open-bpmn.glsp-server/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "java",
       "name": "Launch BPMN GLSP Server",
       "request": "launch",
-      "mainClass": "org.imixs.bpmn.glsp.BPMNServerLauncher",
+      "mainClass": "org.openbpmn.glsp.BPMNServerLauncher",
       "projectName": "org.imixs.bpmn.glsp",
       "args": ["--port", "5007"],
       "console": "internalConsole",
