--- a/open-bpmn.glsp-server/plugin.xml
+++ b/open-bpmn.glsp-server/plugin.xml
@@ -6,13 +6,6 @@
 
 <plugin>
 
-   <extension point="org.eclipse.emf.ecore.generated_package">
-      <!-- @generated BPMN20 -->
-      <package
-            uri="http://www.imixs.org/bpmn/glsp/graph"
-            class="org.openbpmn.bpmngraph.BpmngraphPackage"
-            genModel="model/bpmn-graph.genmodel"/>
-   </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated bpmn-glsp -->
@@ -27,7 +20,7 @@
       <package
             uri="http://www.eclipse.org/glsp/graph"
             class="org.eclipse.glsp.graph.GraphPackage"
-            genModel="model/bpmn-graph.genmodel"/>
+            genModel="model/bpmn-glsp.genmodel"/>
    </extension>
 
 </plugin>
