exclude junit test resoruces from git

--- a/open-bpmn.metamodel/.gitignore
+++ b/open-bpmn.metamodel/.gitignore
@@ -1,4 +1,4 @@
 
 ### junit test resoruces ###
-.src/test/resources/create-*
-.src/test/resources/update-*
+src/test/resources/create-*
+src/test/resources/update-*
