improved npm settings
Issue #35

--- a/open-bpmn.glsp-client/open-bpmn-properties/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@open-bpmn/open-bpmn-properties",
   "version": "0.2.0",
+  "description": "GLSP property panel for BPMN 2.0",
+  "license": "(GPL-3.0)",   
   "dependencies": {
+    "@eclipse-glsp/client": "0.10.0-next.385713d.170",
     "@open-bpmn/open-bpmn-model": "0.2.0",
     "@jsonforms/core": "3.0.0-beta.0",
     "@jsonforms/react": "3.0.0-beta.0",
@@ -22,7 +25,6 @@
   "files": [
     "lib",
     "src",
-    "build",
     "css"
   ],
   "main": "lib/index",
