--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -2,22 +2,21 @@
   "private": true,
   "name": "open-bpmn-app",
   "version": "0.2.0",
+  "description": "Web App for Open BPMN",
+  "license": "(GPL-3.0)",     
   "dependencies": {
-    "@theia/core": "1.20.0",
-    "@theia/editor": "1.20.0",
-    "@theia/filesystem": "1.20.0",
-    "@theia/markers": "1.20.0",
-    "@theia/messages": "1.20.0",
-    "@theia/monaco": "1.20.0",
-    "@theia/navigator": "1.20.0",
-    "@theia/preferences": "1.20.0",
-    "@theia/process": "1.20.0",
-    "@theia/terminal": "1.20.0",
-    "@theia/workspace": "1.20.0",
+    "@theia/core": "1.24.0",
+    "@theia/editor": "1.24.0",
+    "@theia/filesystem": "1.24.0",
+    "@theia/markers": "1.24.0",
+    "@theia/messages": "1.24.0",
+    "@theia/monaco": "1.24.0",
+    "@theia/navigator": "1.24.0",
+    "@theia/preferences": "1.24.0",
+    "@theia/process": "1.24.0",
+    "@theia/terminal": "1.24.0",
+    "@theia/workspace": "1.24.0",
     "@open-bpmn/open-bpmn-theia": "0.2.0"
-  },
-  "devDependencies": {
-    "@theia/cli": "1.20.0"
   },
   "scripts": {
     "prepare": "yarn build",
