--- a/open-bpmn.glsp-client/open-bpmn-glsp/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-bpmn/open-bpmn-glsp",
   "version": "0.2.0",
-  "description": "GLSP sprotty diagrams for the BPMN DSL",
+  "description": "GLSP diagrams for BPMN 2.0",
   "license": "(GPL-3.0)",
   "keywords": [
     "glsp",
@@ -24,11 +24,9 @@
     }
   ],
   "dependencies": {
+    "@eclipse-glsp/client": "0.10.0-next.385713d.170",
     "@open-bpmn/open-bpmn-model": "0.2.0",
     "@open-bpmn/open-bpmn-properties": "0.2.0",
-    "@jsonforms/core": "3.0.0-beta.0",
-    "@jsonforms/react": "3.0.0-beta.0",
-    "@jsonforms/vanilla-renderers": "3.0.0-beta.0",
     "balloon-css": "^0.5.0"
   },
   "peerDependencies": {
@@ -45,7 +43,6 @@
   "files": [
     "lib",
     "src",
-    "build",
     "css"
   ],
   "main": "lib/index",
