--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@open-bpmn/open-bpmn-model",
   "version": "0.2.0",
+  "description": "GLSP model for BPMN 2.0",
+  "license": "(GPL-3.0)",  
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
     "clean": "rimraf lib",
@@ -8,10 +10,12 @@
     "lint": "eslint -c ../.eslintrc.js --ext .ts,.tsx ./src",
     "watch": "tsc -w"
   },
+  "dependencies": {
+    "@eclipse-glsp/client": "0.10.0-next.385713d.170"
+  },  
   "files": [
     "lib",
-    "src",
-    "build"
+    "src"
   ],
   "main": "lib/index",
   "types": "lib/index"  
