--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -2,11 +2,12 @@
   "private": true,
   "name": "parent",
   "version": "0.2.0",
+  "description": "Open BPMN 2.0",
+  "license": "(GPL-3.0)",     
   "engines": {
     "yarn": ">=1.7.0 <2.x.x",
     "node": ">= 12.14.1"
   },
-  "license": "(EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0)",
   "author": {
     "name": "Imixs Workflow"
   },
@@ -33,18 +34,12 @@
     "start:external": "yarn build && yarn --cwd open-bpmn-app start:external",
     "rebuild:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external"
   },
-  "dependencies": {
-    "@eclipse-glsp/client": "0.10.0-next.385713d.170"
-  },  
-  "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "typescript": ">=4.5.5"
-  },
   "devDependencies": {
     "@eclipse-glsp/config": "0.10.0",
+    "typescript": ">=4.5.5",    
     "lerna": "^4.0.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "@theia/cli": "1.24.0"
   },
   "workspaces": [
     "open-bpmn-glsp",
@@ -57,21 +52,22 @@
   "resolutions": {
     "**/@eclipse-glsp/theia-integration": "0.10.0-next.a2c1ac1.122",
     "**/@eclipse-glsp/client": "0.10.0-next.385713d.170",  
-    "**/@theia/core": "1.20.0",
-    "**/@theia/editor": "1.20.0",
-    "**/@theia/filesystem": "1.20.0",
-    "**/@theia/markers": "1.20.0",
-    "**/@theia/messages": "1.20.0",
-    "**/@theia/monaco": "1.20.0",
-    "**/@theia/navigator": "1.20.0",
-    "**/@theia/outline-view": "1.20.0",
-    "**/@theia/preferences": "1.20.0",
-    "**/@theia/process": "1.20.0",
-    "**/@theia/terminal": "1.20.0",
-    "**/@theia/variable-resolver": "1.20.0",
-    "**/@theia/userstorage": "1.20.0",
-    "**/@theia/workspace": "1.20.0",
-    "**/@theia/cli": "1.20.0",
+    "**/@eclipse-glsp/protocol": "0.10.0-next.385713d.170",  
+    "**/@theia/core": "1.24.0",
+    "**/@theia/editor": "1.24.0",
+    "**/@theia/filesystem": "1.24.0",
+    "**/@theia/markers": "1.24.0",
+    "**/@theia/messages": "1.24.0",
+    "**/@theia/monaco": "1.24.0",
+    "**/@theia/navigator": "1.24.0",
+    "**/@theia/outline-view": "1.24.0",
+    "**/@theia/preferences": "1.24.0",
+    "**/@theia/process": "1.24.0",
+    "**/@theia/terminal": "1.24.0",
+    "**/@theia/variable-resolver": "1.24.0",
+    "**/@theia/userstorage": "1.24.0",
+    "**/@theia/workspace": "1.24.0",
+    "**/@theia/cli": "1.24.0",
     "**/inversify": "5.1.1"
   }
 }
