--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -46,7 +46,8 @@
     "open-bpmn-model",
     "open-bpmn-properties",
     "open-bpmn-theia",
-    "open-bpmn-app"
+    "open-bpmn-app",
+    "workspaces/*"
   ],
 
   "resolutions": {
