--- a/open-bpmn.metamodel/pom.xml
+++ b/open-bpmn.metamodel/pom.xml
@@ -6,7 +6,7 @@
 		<version>0.2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>open-bpmn.metamodel</artifactId>
-	<name>Imixs Open BPMN 2.0 Metamodel</name>
+	<name>Imixs Open BPMN - Metamodel</name>
 	<description>The BPMN2 Metamodel Project</description>
 
 
