--- a/open-bpmn.glsp-client/open-bpmn-properties/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/package.json
@@ -4,7 +4,7 @@
   "description": "GLSP property panel for BPMN 2.0",
   "license": "(GPL-3.0)",   
   "dependencies": {
-    "@eclipse-glsp/client": "0.10.0-next.385713d.170",
+    "@eclipse-glsp/client": "^1.0.0",
     "@open-bpmn/open-bpmn-model": "0.3.0",
     "@jsonforms/core": "3.0.0-beta.5",
     "@jsonforms/react": "3.0.0-beta.5",
