--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -35,11 +35,11 @@
     "rebuild:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external"
   },
   "devDependencies": {
-    "@eclipse-glsp/config": "0.10.0",
+    "@eclipse-glsp/config": "1.0.0",  
     "typescript": ">=4.5.5",    
     "lerna": "^4.0.0",
     "rimraf": "^2.6.1",
-    "@theia/cli": "1.24.0"
+    "@theia/cli": "1.26.0"
   },
   "workspaces": [
     "open-bpmn-glsp",
@@ -51,24 +51,24 @@
   ],
 
   "resolutions": {
-    "**/@eclipse-glsp/theia-integration": "0.10.0-next.a2c1ac1.122",
-    "**/@eclipse-glsp/client": "0.10.0-next.385713d.170",  
-    "**/@eclipse-glsp/protocol": "0.10.0-next.385713d.170",  
-    "**/@theia/core": "1.24.0",
-    "**/@theia/editor": "1.24.0",
-    "**/@theia/filesystem": "1.24.0",
-    "**/@theia/markers": "1.24.0",
-    "**/@theia/messages": "1.24.0",
-    "**/@theia/monaco": "1.24.0",
-    "**/@theia/navigator": "1.24.0",
-    "**/@theia/outline-view": "1.24.0",
-    "**/@theia/preferences": "1.24.0",
-    "**/@theia/process": "1.24.0",
-    "**/@theia/terminal": "1.24.0",
-    "**/@theia/variable-resolver": "1.24.0",
-    "**/@theia/userstorage": "1.24.0",
-    "**/@theia/workspace": "1.24.0",
-    "**/@theia/cli": "1.24.0",
+    "**/@eclipse-glsp/theia-integration": "^1.0.0",
+    "**/@eclipse-glsp/client": "^1.0.0",  
+    "**/@eclipse-glsp/protocol": "^1.0.0",  
+    "**/@theia/core": "1.26.0",
+    "**/@theia/editor": "1.26.0",
+    "**/@theia/filesystem": "1.26.0",
+    "**/@theia/markers": "1.26.0",
+    "**/@theia/messages": "1.26.0",
+    "**/@theia/monaco": "1.26.0",
+    "**/@theia/navigator": "1.26.0",
+    "**/@theia/outline-view": "1.26.0",
+    "**/@theia/preferences": "1.26.0",
+    "**/@theia/process": "1.26.0",
+    "**/@theia/terminal": "1.26.0",
+    "**/@theia/variable-resolver": "1.26.0",
+    "**/@theia/userstorage": "1.26.0",
+    "**/@theia/workspace": "1.26.0",
+    "**/@theia/cli": "1.26.0",
     "**/inversify": "5.1.1"
   }
 }
