--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -39,7 +39,8 @@
     "typescript": ">=4.5.5",    
     "lerna": "^4.0.0",
     "rimraf": "^2.6.1",
-    "@theia/cli": "1.26.0"
+    "@theia/cli": "1.26.0",
+    "@types/lodash": "^4.14.149"
   },
   "workspaces": [
     "open-bpmn-glsp",
