Fix build errros
- Add tsconfig.tsbuildinfo to gitingore and ensure that is removed when a `clean` script is executed. This file was introduced with the ugprade to TS 4.5 (implicitly with glsp-config 1.0.0)
- Adds `esModuleInterop` flag to `open-bpmn-properties` tsconfig
- Fix type warnings in `ImixsArrayRenderer` by introducing composite type interfaces  (and undefined checking).
-  Autoformat files that showed linter warnings  (e.g. `bpmn-anchor.ts`) with `prettier` to get rid of linter warnings
- Adapt `webpack.config.js` to ignore source map loader warnings.

--- a/open-bpmn.glsp-client/.gitignore
+++ b/open-bpmn.glsp-client/.gitignore
@@ -34,6 +34,7 @@ buildNumber.properties
 node_modules
 node_modules/.yarn-integrity
 .browser_modules
+tsconfig.tsbuildinfo
 # yarn.lock - no good idea
 lib
 
