--- a/open-bpmn.glsp-client/open-bpmn-properties/tsconfig.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "lib",
     "baseUrl": ".",
     "jsx": "react",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
