--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -2,21 +2,21 @@
   "name": "@open-bpmn/open-bpmn-model",
   "version": "0.3.0",
   "description": "GLSP model for BPMN 2.0",
-  "license": "(GPL-3.0)",  
+  "license": "(GPL-3.0)",
   "scripts": {
     "prepare": "yarn clean && yarn build && yarn lint",
-    "clean": "rimraf lib",
+    "clean": "rimraf lib tsconfig.tsbuildinfo",
     "build": "tsc",
     "lint": "eslint -c ../.eslintrc.js --ext .ts,.tsx ./src",
     "watch": "tsc -w"
   },
   "dependencies": {
     "@eclipse-glsp/client": "^1.0.0"
-  },  
+  },
   "files": [
     "lib",
     "src"
   ],
   "main": "lib/index",
-  "types": "lib/index"  
+  "types": "lib/index"
 }
