--- a/open-bpmn.glsp-client/open-bpmn-properties/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "@eclipse-glsp/client": "^1.0.0",
     "@open-bpmn/open-bpmn-model": "0.3.0",
-    "@jsonforms/core": "3.0.0-beta.5",
-    "@jsonforms/react": "3.0.0-beta.5",
-    "@jsonforms/vanilla-renderers": "3.0.0-beta.5",
+    "@jsonforms/core": "3.0.0",
+    "@jsonforms/react": "3.0.0",
+    "@jsonforms/vanilla-renderers": "3.0.0",
     "balloon-css": "^0.5.0"
   },
   "peerDependencies": {
