--- a/open-bpmn.metamodel/.gitignore
+++ b/open-bpmn.metamodel/.gitignore
@@ -3,4 +3,4 @@
 src/test/resources/create-*
 src/test/resources/update-*
 src/test/resources/delete-*
-src/test/resources/out*.bpmn
+src/test/resources/output/*.bpmn
