--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -6,7 +6,7 @@
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>open-bpmn.server</artifactId>
-	<name>Imixs Open BPMN GLSP Server</name>
+	<name>Imixs Open BPMN - GLSP Server</name>
 
 
 	<properties>
