--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>org.eclipse.glsp.server</artifactId>
 			<version>${glsp-server-version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.1</version>
+		</dependency>		
 <!--
 		<dependency>
 			<groupId>org.eclipse.glsp</groupId>
