--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -5,25 +5,27 @@
   "description": "Web App for Open BPMN",
   "license": "(GPL-3.0)",     
   "dependencies": {
-    "@theia/core": "1.26.0",
-    "@theia/editor": "1.26.0",
-    "@theia/filesystem": "1.26.0",
-    "@theia/markers": "1.26.0",
-    "@theia/messages": "1.26.0",
-    "@theia/monaco": "1.26.0",
-    "@theia/navigator": "1.26.0",
-    "@theia/preferences": "1.26.0",
-    "@theia/process": "1.26.0",
-    "@theia/terminal": "1.26.0",
-    "@theia/workspace": "1.26.0",
+    "@theia/core": "1.27.0",
+    "@theia/editor": "1.27.0",
+    "@theia/filesystem": "1.27.0",
+    "@theia/markers": "1.27.0",
+    "@theia/messages": "1.27.0",
+    "@theia/monaco": "1.27.0",
+    "@theia/navigator": "1.27.0",
+    "@theia/preferences": "1.27.0",
+    "@theia/process": "1.27.0",
+    "@theia/terminal": "1.27.0",
+    "@theia/workspace": "1.27.0",
     "@open-bpmn/open-bpmn-theia": "0.6.0"
   },
+  "devDependencies": {
+    "@theia/cli": "1.27.0"
+  },
   "scripts": {
-    "prepare": "yarn build",
-    "build": "theia build --mode development",
+    "prepare": "theia build --mode development",
     "start": "theia start --GLSP_PORT=5007 --root-dir=../workspace",
     "start:external": "theia start --GLSP_PORT=5007 --root-dir=../workspace --debug",
-    "watch": "yarn build --mode development"
+    "watch": "theia build --watch --mode development"
   },
   "theia": {
     "target": "browser"
