--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -35,7 +35,7 @@
   },
     
   "devDependencies": {
-    "@eclipse-glsp/config": "^1.0.0",
+    "@eclipse-glsp/config": "^1.1.0-next",
     "rimraf": "^2.6.1",
     "lerna": "^4.0.0",
     "typescript": "^4.5.5"
