--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -17,7 +17,8 @@
 		<package-type>eclipse-plugin</package-type>
 		<server-launcher>org.imixs.bpmn.glsp.server.launch.BPMN2ServerLauncher</server-launcher>
 		
-		<glsp-server-version>1.0.0</glsp-server-version>
+		<!-- 1.0.0 | 1.1.0.RC02 | 1.1.0-SNAPSHOT -->
+		<glsp-server-version>1.1.0.RC02</glsp-server-version>
 	</properties>
 
 	<dependencies>
@@ -32,12 +33,13 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.17.1</version>
 		</dependency>		
-<!--
+
 		<dependency>
 			<groupId>org.eclipse.glsp</groupId>
 			<artifactId>org.eclipse.glsp.server.websocket</artifactId>
 			<version>${glsp-server-version}</version>
 		</dependency>
+<!--
 		<dependency>
 			<groupId>org.eclipse.glsp</groupId>
 			<artifactId>org.eclipse.glsp.layout</artifactId>
