--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -6,7 +6,7 @@
   "license": "(GPL-3.0)",     
   "engines": {
     "yarn": ">=1.7.0 <2.x.x",
-    "node": ">= 12.14.1"
+    "node": ">=14.18.0"
   },
   "author": {
     "name": "Imixs Workflow"
@@ -35,10 +35,10 @@
   },
     
   "devDependencies": {
-    "@eclipse-glsp/config": "^1.1.0-next",
+    "@eclipse-glsp/config": "1.1.0-next.d03ad9f.112",
     "rimraf": "^2.6.1",
-    "lerna": "^4.0.0",
-    "typescript": "^4.5.5"
+    "lerna": "^6.1.0",
+    "typescript": "^4.9.3"
   },
   "workspaces": [
     "open-bpmn-glsp",
@@ -50,11 +50,12 @@
   ],
 
   "resolutions": {
-    "**/@theia/core": "1.27.0",
-    "**/@theia/editor": "1.27.0",
-    "**/@theia/filesystem": "1.27.0",
-    "**/@theia/messages": "1.27.0",
-    "**/@theia/monaco": "1.27.0",
+    "**/@theia/core": "1.29.2",
+    "**/@theia/editor": "1.29.2",
+    "**/@theia/filesystem": "1.29.2",
+    "**/@theia/messages": "1.29.2",
+    "**/@theia/monaco": "1.29.2",
+    "**/@theia/cli": "1.29.2",
     "sprotty": "0.13.0-next.1c4343c.328"
   }
 }
