improved build and release scripts, package.json config
Issue #149

--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -1,6 +1,5 @@
 {
-  "private": true,
-  "name": "open-bpmn-app",
+  "name": "@open-bpmn/open-bpmn-app",
   "version": "0.7.0",
   "description": "Web App for Open BPMN",
   "license": "(GPL-3.0)",     
