--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.imixs.bpmn</groupId>
 	<artifactId>open-bpmn</artifactId>
 	<description>Imixs Open BPMN</description>
-	<version>0.7.0-SNAPSHOT</version>
+	<version>0.7.0</version>
 	<packaging>pom</packaging>
 
 	<name>Imixs Open BPMN</name>
@@ -64,7 +64,7 @@
 		<connection>scm:git:git@github.com:imixs/open-bpmn.git</connection>
 		<developerConnection>scm:git:git@github.com:imixs/open-bpmn.git</developerConnection>
 		<url>https://github.com/imixs/open-bpmn/</url>
-		<tag>HEAD</tag>
+		<tag>open-bpmn-0.7.0</tag>
 	</scm>
 
 	<issueManagement>
