--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -3,7 +3,7 @@
   "name": "parent",
   "version": "0.7.2",
   "description": "Open BPMN 2.0",
-  "license": "(GPL-3.0)",     
+  "license": "EPL-2.0",     
   "engines": {
     "yarn": ">=1.7.0 <2.x.x",
     "node": ">=14.18.0"
