--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -21,7 +21,8 @@
     "@theia/cli": "1.29.2"
   },
   "scripts": {
-    "prepare": "theia build --mode development",
+    "prepare": "yarn build",
+    "build": "theia build --mode development",
     "start": "theia start --GLSP_PORT=5007 --root-dir=../workspace",
     "start:external": "theia start --GLSP_PORT=5007 --root-dir=../workspace --debug",
     "watch": "theia build --watch --mode development"
