--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -27,15 +27,14 @@
     "prepare": "lerna run prepare",
     "watch": "lerna run --parallel watch",
     "build": "yarn install:only && lerna run build",
-    "lint": "yarn install:only && lerna run lint --",
+    "lint": "lerna run lint --",
     "install:only": "yarn install --ignore-scripts",
     "rebuild:browser": "theia rebuild:browser",
     "start": "yarn rebuild:browser && yarn --cwd open-bpmn-app start",
     "start:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external"
   },
-    
   "devDependencies": {
-    "@eclipse-glsp/config": "1.1.0-next.d03ad9f.112",
+    "@eclipse-glsp/config": "1.1.0-next.fe535db.107",
     "rimraf": "^2.6.1",
     "lerna": "^6.1.0",
     "typescript": "^4.9.3"
@@ -45,10 +44,8 @@
     "open-bpmn-model",
     "open-bpmn-properties",
     "open-bpmn-theia",
-    "open-bpmn-app",
-    "workspaces/*"
+    "open-bpmn-app"
   ],
-
   "resolutions": {
     "**/@theia/core": "1.29.2",
     "**/@theia/editor": "1.29.2",
