glsp-1.1.0-RC04 refactoring
Issue #152

--- a/open-bpmn.glsp-client/open-bpmn-theia/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-theia/package.json
@@ -43,8 +43,8 @@
   },
   "theiaExtensions": [
     {
-      "frontend": "lib/browser/frontend-module",
-      "backend": "lib/node/backend-module"
+      "frontend": "lib/browser/bpmn-frontend-module",
+      "backend": "lib/node/bpmn-backend-module"
     }
   ]
 }
