--- a/.github/workflows/build-maven-docker.yml
+++ b/.github/workflows/build-maven-docker.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Build and create Docker Image
 
 on:
   push:
