--- a/open-bpmn.glsp-server/.gitignore
+++ b/open-bpmn.glsp-server/.gitignore
@@ -1,1 +1,8 @@
+# ignore eclipse directories and project files
+.settings/
+.project
+.classpath
+
 /target/
+/.apt_generated/
+/.apt_generated_tests/
