--- a/open-bpmn.glsp-server/.gitignore
+++ b/open-bpmn.glsp-server/.gitignore
@@ -1,8 +1,18 @@
+# ignore all bin directories
+# matches "bin" in any subfolder
+bin/
+
+# ignore all target directories
+target/
+
+# ignore all files ending with ~
+*~ 
+
 # ignore eclipse directories and project files
 .settings/
 .project
 .classpath
 
-/target/
+
 /.apt_generated/
 /.apt_generated_tests/
