--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -6,8 +6,8 @@
 		<version>0.9.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>open-bpmn.server</artifactId>
-	<name>Imixs Open BPMN - GLSP Server</name>
-
+	<name>Open BPMN - Server</name>
+	<description>The Open BPMN Server Project</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
