--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -3,7 +3,7 @@
   "name": "parent",
   "version": "0.9.2",
   "description": "Open BPMN 2.0",
-  "license": "EPL-2.0",     
+  "license": "EPL-2.0",
   "engines": {
     "yarn": ">=1.7.0 <2.x.x",
     "node": ">=14.18.0"
@@ -27,7 +27,7 @@
     "prepare": "lerna run prepare",
     "watch": "lerna run --parallel watch",
     "build": "yarn install:only && lerna run build",
-    "lint": "lerna run lint --",
+    "lint": "yarn install:only && lerna run lint --",
     "install:only": "yarn install --ignore-scripts",
     "rebuild:browser": "theia rebuild:browser",
     "start": "yarn rebuild:browser && yarn --cwd open-bpmn-app start",
@@ -40,9 +40,9 @@
     "typescript": "^4.9.3"
   },
   "workspaces": [
-    "open-bpmn-glsp",
     "open-bpmn-model",
     "open-bpmn-properties",
+    "open-bpmn-glsp",
     "open-bpmn-theia",
     "open-bpmn-app"
   ]
