fixed - updated .gitignore
Issue #217

--- a/open-bpmn.glsp-client/open-bpmn-theia/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-theia/package.json
@@ -31,15 +31,11 @@
     "@eclipse-glsp/theia-integration": "1.1.0-RC04"
   },
   "scripts": {
-    "build": "tsc -b",
-    "clean": "rimraf lib tsconfig.tsbuildinfo server/*.log",
+    "prepare": "yarn run clean && yarn run build",
+    "clean": "rimraf lib tsconfig.tsbuildinfo",
+    "build": "tsc && yarn run lint",
     "lint": "eslint --ext .ts,.tsx ./src",
-    "lint:ci": "yarn lint -o eslint.xml -f checkstyle",
-    "prepare": "yarn clean && yarn build",
     "watch": "tsc -w"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "theiaExtensions": [
     {
