--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .settings/
 .project
 .classpath
+open-bpmn.glsp-server/.classpath
 
 ### Maven ###
 target/
@@ -15,24 +16,16 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
-
 .temp
-
 *.log
 
-## Web ##
-
+## Node.js/yarn/lerna ##
 node_modules
 node_modules/.yarn-integrity
 .browser_modules
-
 lib
-
 *.log
 
-**/*-app/**
-!**/*-app/package.json
-
-
-
-open-bpmn.glsp-server/.classpath
+# see: https://github.com/eclipse-glsp/glsp/issues/952#issuecomment-1463472294
+#**/*-app/**
+#!**/*-app/package.json
