--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "@open-bpmn/open-bpmn-app",
+  "private": true,
+  "name": "open-bpmn-app",
   "version": "0.9.2",
   "description": "Web App for Open BPMN",
-  "license": "(GPL-3.0)",     
+  "license": "(GPL-3.0)",
   "dependencies": {
-    "@open-bpmn/open-bpmn-theia": "0.9.2",  
-    "@theia/core": "1.33.0",
-    "@theia/editor": "1.33.0",
-    "@theia/filesystem": "1.33.0",
-    "@theia/markers": "1.33.0",
-    "@theia/messages": "1.33.0",
-    "@theia/monaco": "1.33.0",
-    "@theia/navigator": "1.33.0",
-    "@theia/preferences": "1.33.0",
-    "@theia/process": "1.33.0",
-    "@theia/terminal": "1.33.0",
-    "@theia/workspace": "1.33.0",
+    "@open-bpmn/open-bpmn-theia": "0.9.2",
+    "@theia/core": "1.34.0",
+    "@theia/editor": "1.34.0",
+    "@theia/filesystem": "1.34.0",
+    "@theia/markers": "1.34.0",
+    "@theia/messages": "1.34.0",
+    "@theia/monaco": "1.34.0",
+    "@theia/navigator": "1.34.0",
+    "@theia/preferences": "1.34.0",
+    "@theia/process": "1.34.0",
+    "@theia/terminal": "1.34.0",
+    "@theia/workspace": "1.34.0",
     "sprotty-theia": "0.13.0-next.9cbedec"
   },
   "devDependencies": {
-    "@theia/cli": "1.33.0"
+    "@theia/cli": "1.34.0"
   },
   "scripts": {
     "build": "theia build --mode development",
