[maven-release-plugin] prepare release open-bpmn-0.9.3

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.imixs.bpmn</groupId>
 	<artifactId>open-bpmn</artifactId>
-	<version>0.9.3-SNAPSHOT</version>
+	<version>0.9.3</version>
 	<packaging>pom</packaging>
 	<name>Open BPMN</name>
 	<description>The Open BPMN Modeling Platform</description>
@@ -63,7 +63,7 @@
 		<connection>scm:git:git@github.com:imixs/open-bpmn.git</connection>
 		<developerConnection>scm:git:git@github.com:imixs/open-bpmn.git</developerConnection>
 		<url>https://github.com/imixs/open-bpmn/</url>
-		<tag>HEAD</tag>
+		<tag>open-bpmn-0.9.3</tag>
 	</scm>
 
 	<issueManagement>
