--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -6,21 +6,21 @@
   "license": "(GPL-3.0)",
   "dependencies": {
     "@open-bpmn/open-bpmn-theia": "1.0.3",
-    "@theia/core": "1.34.0",
-    "@theia/editor": "1.34.0",
-    "@theia/filesystem": "1.34.0",
-    "@theia/markers": "1.34.0",
-    "@theia/messages": "1.34.0",
-    "@theia/monaco": "1.34.0",
-    "@theia/navigator": "1.34.0",
-    "@theia/preferences": "1.34.0",
-    "@theia/process": "1.34.0",
-    "@theia/terminal": "1.34.0",
-    "@theia/workspace": "1.34.0",
+    "@theia/core": "1.39.0-next.20",
+    "@theia/editor": "1.39.0-next.20",
+    "@theia/filesystem": "1.39.0-next.20",
+    "@theia/markers": "1.39.0-next.20",
+    "@theia/messages": "1.39.0-next.20",
+    "@theia/monaco": "1.39.0-next.20",
+    "@theia/navigator": "1.39.0-next.20",
+    "@theia/preferences": "1.39.0-next.20",
+    "@theia/process": "1.39.0-next.20",
+    "@theia/terminal": "1.39.0-next.20",
+    "@theia/workspace": "1.39.0-next.20",
     "sprotty-theia": "0.13.0-next.9cbedec"
   },
   "devDependencies": {
-    "@theia/cli": "1.34.0"
+    "@theia/cli": "1.39.0-next.20"
   },
   "scripts": {
     "build": "theia build --mode development",
