--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -22,6 +22,33 @@
 			<artifactId>org.eclipse.glsp.server</artifactId>
 			<version>${glsp-server-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.glsp</groupId>
+			<artifactId>org.eclipse.glsp.graph</artifactId>
+			<version>${glsp-server-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.glsp</groupId>
+			<artifactId>org.eclipse.glsp.server.websocket</artifactId>
+			<version>${glsp-server-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.glsp</groupId>
+			<artifactId>org.eclipse.glsp.layout</artifactId>
+			<version>${glsp-server-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.elk</groupId>
+			<artifactId>org.eclipse.elk.alg.layered</artifactId>
+			<version>${elk.version}</version>
+				<exclusions>
+				<!--ELK still has a log4J 1.2 dependency. So we exclude it -->
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -117,7 +144,7 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>org.openbpmn.glsp.BPMNServerLauncher</mainClass>
+									<mainClass>org.openbpmn.glsp.launch.BPMNServerLauncher</mainClass>
 									<manifestEntries>
 										<Multi-Release>true</Multi-Release>
 									</manifestEntries>
@@ -129,7 +156,7 @@
 									<exclude>javax.websocket:javax.websocket-api</exclude>
 									<exclude>log4j:log4j</exclude>
 								</excludes>
-							</artifactSet>							
+							</artifactSet>								
 							<filters>
 								<filter>
 									<artifact>*:*</artifact>
