--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -11,7 +11,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@eclipse-glsp/client": "1.1.0-RC10"
+    "@eclipse-glsp/client": "2.0.0"
   },
   "files": [
     "lib",
