--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -34,7 +34,7 @@
     "start:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external"
   },
   "devDependencies": {
-    "@eclipse-glsp/config": "1.1.0-next.d03ad9f.112",
+    "@eclipse-glsp/config": "2.0.0",
     "rimraf": "^2.6.1",
     "lerna": "^6.1.0",
     "typescript": "^4.9.3"
